UI: Fix toolbar appearance on OSX
(integrated from master branch change 9.2.1-772-g90f1a21 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -146,9 +146,9 @@ resizer
 }
 
 /**
- * On Windows and OSX we want to offset the top padding for the size used by the resizer
+ * On Windows and Linux we want to offset the top padding for the size used by the resizer
  */
-#komodo_main[hidechrome="true"]:-moz-any(window[os-name="Windows_NT"], window[os-name="Linux"]) #komodo_main[hidechrome="true"] #toolbox_main
+#komodo_main[hidechrome="true"]:-moz-any(window[os-name="Windows_NT"],window[os-name="Linux"]) #toolbox_main
 {
     padding-top: 0 !important;
 }
@@ -194,12 +194,4 @@ resizer
     {
         background: @background !important;
     }
-}
-
-/**
- * Make room for the window buttons
- */
-#komodo_main[hidechrome="true"][os-name="Darwin"] #main-toolboxrow
-{
-    padding-left: 64px;
 }
