--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -374,7 +374,8 @@ treechildren::-moz-tree-twisty {
     -moz-appearance: none;
     width: 14px;
     height: 14px;
-    margin-right: -6px;
+    margin-right: -5px;
+    margin-top: 3px;
 }
 
 tree.twisty-only treechildren::-moz-tree-image
