--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -1,8 +1,8 @@
 #windowButtons
 {
-    .icon-minus-circle2 { color: #FCFFC2; }
-    .icon-plus-circle2 { color: #98E4FF; }
-    .icon-cancel-circle2 { color: #FF8787; }
+    .icon-minus-circle2 { color: @window-button-minimize; }
+    .icon-plus-circle2 { color: @window-button-maximize; }
+    .icon-cancel-circle2 { color: @window-button-close; }
     
     & > toolbarbutton:hover
     {
