--- a/src/chrome/komodo/skin/global/colors.less
+++ b/src/chrome/komodo/skin/global/colors.less
@@ -30,6 +30,16 @@
 @textbox-foreground-special: #565656;
 @icons-special: #FFF;
 
+/* Widgets */
+@widget: @background;
+@foreground-widget: @foreground;
+@contrast-widget: @contrast;
+@selected-widget: @special;
+@selected-foreground-widget: @special;
+@textbox-widget: @contrast;
+@textbox-foreground-widget: @foreground;
+@icons-widget: @icons;
+
 /* SCC */
 @scc-ok: #C5CAE9;
 @scc-new: #CDDC39;
@@ -45,8 +55,13 @@
 @state-ok: #689F38;
 @state-foreground: #FFF;
 
+@window-button-close: #FF8787;
+@window-button-maximize: #98E4FF;
+@window-button-minimize: #FCFFC2;
+
 /* Escaped versions of above, cause LESS can't do this apparently */
 @escaped-icons: %23FFF;
 @escaped-icons-special: %23FFF;
+@escaped-icons-widget: %23FFF;
 @escaped-special: %233F8AFF;
 
