UI: Removed old platform UI and replaced with new WIP
(integrated from master branch change
0453ac37d1cae6f633413e02866f739e3986c18f by Nathan Rijksen
<n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/komodo.p.css
+++ b/src/chrome/komodo/skin/komodo.p.css
@@ -34,534 +34,23 @@
  * 
  * ***** END LICENSE BLOCK ***** */
 @import url("chrome://global/skin/");
-@import url("chrome://komodo/skin/unifiedWindow.css");  /* only exists on Mac */
-@import url("chrome://komodo/skin/splitter.css");
 
-/* ::::: fullscreen window controls ::::: */
-
-#window-controls {
-  -moz-box-align: center;
-  padding: 0 2px 0 4px;
-}
-
-/* Support full screen toolbar auto-hide */
 #toolbox_main {
   -moz-binding: url("chrome://komodo/content/bindings/toolbar.xml#toolbox");
 }
-#toolbox_main[_fullscreen] > [anonid="children-box"] {
-  height: 0;
-  overflow-y: hidden;
-  -moz-transition-duration: 5s;
-  -moz-transition-delay: 0.25s;
-}
-#toolbox_main[_fullscreen]:hover > [anonid="children-box"] {
-  height: initial;
-  -moz-transition-duration: 5s;
-  -moz-transition-delay: 0.25s;
-}
-#toolbox_main:not([_fullscreen]) > [anonid="hover-box"] {
-  visibility: collapse;
-}
-#toolbox_main[_fullscreen] > [anonid="hover-box"] {
-  height: 1px;
-  margin-bottom: 0;
-}
-/* when in fullscreen mode, hide menubars, toolbars, and statusbars that are
-   not marked with [fullscreentoolbar], except those that are immediate children
-   of the main toolbox row. */
-/* #if PLATFORM == "darwin" */
-[sizemode="kofullscreen"]:root :not(#main-toolboxrow) > :-moz-any(menubar, toolbar, statusbar):not([fullscreentoolbar]) {
-  visibility: collapse;
-}
-/* #else */
-[sizemode="fullscreen"]:root :not(#main-toolboxrow) > :-moz-any(menubar, toolbar, statusbar):not([fullscreentoolbar]) {
-  visibility: collapse;
-}
-/* #endif */
-/* when not in fullscreen mode, hide any elements marked as [fullscreencontrol]
-   (i.e. those that should only be shown in full screen) */
-:root:not([sizemode="fullscreen"]) [fullscreencontrol] {
-  display: none;
-}
-
-#toolbox_main #toolbar-menubar {
-  padding-top: 0;
-}
-
-#menubar_main {
-  -moz-appearance: menubar;
-  padding-top: 0;
-}
-
-#menubar_main > #window-controls > toolbarbutton {
-  -moz-appearance: none;
-}
-
-#menubar_main > #window-controls > toolbarbutton:hover {
-  border-color: transparent;
-}
-
-#minimize-button {
-  list-style-image: url("chrome://global/skin/icons/Minimize.gif");
-}
-
-#restore-button {
-  list-style-image: url("chrome://global/skin/icons/Restore.gif");
-}
-
-#close-button {
-  list-style-image: url("chrome://global/skin/icons/Close.gif");
-}
-
-/* #if PLATFORM == "darwin" */
-/* OS X 10.6 is Darwin 10.* */
-:root:not([os-version^="10."]) #fullscreen-restore-button {
-  display: none;
-}
-#fullscreen-restore-button {
-  list-style-image: url("chrome://global/skin/media/fullscreenButton.png");
-  -moz-image-region: rect(0px, 32px, 16px, 16px);
-}
-@media screen and (min-resolution: 2dppx) {
-  #fullscreen-restore-button {
-    list-style-image: url("chrome://global/skin/media/fullscreenButton@2x.png");
-    -moz-image-region: rect(0px, 64px, 32px, 32px);
-  }
-}
-/* #endif */
 
 toolbar[printpreview="true"] {
   -moz-binding: url("chrome://global/content/printPreviewBindings.xml#printpreviewtoolbar");
 }
 
 #main-toolboxrow {
-  min-width: 1px;
-  -moz-appearance: toolbar;
-  border-bottom: 1px solid ThreeDShadow;
   -moz-binding: url('chrome://komodo/content/bindings/toolbar.xml#toolboxrow-overflow');
 }
 
-#main-toolboxrow > [first-overflow] ~ *,
-#main-toolboxrow > [first-overflow] [first-child-overflow],
-#main-toolboxrow > [first-overflow] [first-child-overflow] ~ * {
-  /* things that would overflow in the toolboxrow */
-  visibility: hidden;
-}
-
-#main-toolboxrow > .overflow-toolbarbutton > .toolbarbutton-menu-dropmarker {
-  /* the dropmarker on the toolboxrow overflow button */
-  visibility: collapse;
-}
-
-#main-toolboxrow .overflow-menupopup [disabled] .menu-iconic-icon {
-  opacity: 0.5;
-}
-
-#main-toolboxrow > toolbar {
-  -moz-appearance: none;
-  border: none;
-}
-
-#noPreviewAvailable 
-{
-  background-color: white !important;
-  font-size: 12px !important;
-}
- 
-/* ::::: tooltip :::::
-  copied from popup.css, but modified to be a class rather than
-  element name.  */
-
 popup[type="tooltip"] {
   -moz-binding: url('chrome://komodo/content/bindings/widgets.xml#kotooltip');
-  -moz-appearance: tooltip;
-  margin-top: 11px;
-  border: 1px solid InfoText;
-  padding: 2px 3px;
-  max-width: 40em;
-  background-color: InfoBackground;
-  color: InfoText;
-  font: message-box;
 }
 
-.tooltip-label {
-  margin: 0px !important;
+tree.codetree {
+    -moz-binding: url('chrome://komodo/content/bindings/widgets.xml#cbtree');
 }
-
-label[highlite="true"],
-statusbarpanel[highlite="true"] {
-  margin: 0px;
-  padding: 0px;
-}
-
-statusbarpanel label[highlite="true"],
-statusbarpanel[highlite="true"] > label {
-  color: highlighttext;
-  background-color: highlight;
-  margin: 0px 0px 0px 0px;
-  padding: 1px 10px 2px 10px;
-}
-
-menu.statusbar-label > label,
-menuitem.statusbar-label > label
-{
-  font: status-bar;
-  text-align: left;
-}
-statusbarpanel > toolbarbutton {
-  padding: 0px;
-  margin: 0px;
-  border-style: none;
-  -moz-appearance: none;
-}
-statusbarpanel > toolbarbutton > .toolbarbutton-text {
-  font: status-bar;
-  text-align: left;
-  padding-left: 6px;
-  padding-right: 2px;
-}
-statusbarpanel > toolbarbutton[type="menu"] > dropmarker {
-  /*
-   The moz appearance is necessary to override the additional image provided
-   by the toolbarbutton menu image (provided through a xbl binding).
-   http://bugs.activestate.com/show_bug.cgi?id=79320
-  */
-  -moz-appearance: none !important;
-  list-style-image: url("chrome://komodo/skin/images/menupopup_arrows.png");
-}
-
-#statusbar-language-menu > image
-{
-  width: 16px;
-  height: 16px;
-}
-
-
-/**
- * Status bar messages
- */
-
-#statusbar-message-wrap, #statusbar-message, #statusbar-message > label {
-  border: none;
-  min-width: 0;
-  width: 0;
-  -moz-appearance: none;
-  -moz-box-flex: 1;
-  -moz-box-pack: start;
-}
-
-#statusbar-message-wrap button.close-button {
-  margin: 0 !important;
-  padding: 0 !important;
-  min-width: 0;
-}
-
-#statusbar-message[category="notification-info"] {
-    list-style-image: url("chrome://global/skin/icons/information-16.png");
-}
-
-#statusbar-message[category="notification-warning"] {
-    list-style-image: url("chrome://global/skin/icons/warning-16.png");
-}
-
-#statusbar-message[category="notification-error"] {
-    list-style-image: url("chrome://global/skin/icons/error-16.png");
-}
-
-
-/**
- * Syntax checking statusbar images.
- */
-#statusbar-check.syntax-okay {
-    list-style-image: url("chrome://komodo/skin/images/icon_check_ok.png");
-}
-
-#statusbar-check.syntax-in-progress {
-    list-style-image: url("chrome://komodo/skin/images/icon_check_inprogress.png");
-}
-
-#statusbar-check.syntax-warning {
-    list-style-image: url("chrome://komodo/skin/images/icon_check_warning.png");
-}
-
-#statusbar-check.syntax-error {
-    list-style-image: url("chrome://komodo/skin/images/icon_check_error.png");
-}
-
-/**
- * Statusbar spacing
- */
-
-#statusbar-line-col, #statusbar-selection {
-    min-width: 75px !important;
-}
-
-#statusbar-encoding {
-    min-width: 8em;
-    max-width: 8em;
-}
-
-#statusbar-language {
-    min-width: 8em;
-    max-width: 10em;
-}
-
-#statusbar-section {
-    min-width: 150px !important;
-}
-
-/**
- * Language icons for the language menulists and tree views.
- */
-.languageicon,
-treechildren::-moz-tree-image(DefaultLanguage) {
-  /* The default language icon. */
-  list-style-image: url("koicon://ko-language/Text");
-}
-
-.languageicon image {
-  /* Push the image to the right of the menuitem checkbox. */
-  margin-left: 20px;
-}
-treechildren::-moz-tree-image(DefaultLanguage) {
-  /* Put spacing around the tree images. */
-  margin-left: 3px;
-  margin-right: 3px;
-}
-
-.languageicon[language="ActionScript"],
-treechildren::-moz-tree-image(LanguageActionScript) {
-  list-style-image: url("koicon://ko-language/ActionScript") !important;
-}
-.languageicon[language="C++"],
-treechildren::-moz-tree-image(LanguageC) {
-  list-style-image: url("koicon://ko-language/C++");
-}
-.languageicon[language="CoffeeScript"],
-treechildren::-moz-tree-image(LanguageCoffeeScript) {
-  list-style-image: url("koicon://ko-language/CoffeeScript");
-}
-.languageicon[language="CSS"],
-treechildren::-moz-tree-image(LanguageCSS) {
-  list-style-image: url("koicon://ko-language/CSS");
-}
-.languageicon[language="Django"],
-treechildren::-moz-tree-image(LanguageDjango) {
-  list-style-image: url("koicon://ko-language/Django");
-}
-.languageicon[language="EJS"],
-treechildren::-moz-tree-image(LanguageEJS) {
-  list-style-image: url("koicon://ko-language/EJS");
-}
-.languageicon[language="epMojo"],
-treechildren::-moz-tree-image(LanguageepMojo) {
-  list-style-image: url("koicon://ko-language/epMojo");
-}
-.languageicon[language="HTML"],
-treechildren::-moz-tree-image(LanguageHTML) {
-  list-style-image: url("koicon://ko-language/HTML");
-}
-.languageicon[language="HTML5"],
-treechildren::-moz-tree-image(LanguageHTML5) {
-  list-style-image: url("koicon://ko-language/HTML5");
-}
-.languageicon[language="JavaScript"],
-treechildren::-moz-tree-image(LanguageJavaScript) {
-  list-style-image: url("koicon://ko-language/JavaScript");
-}
-.languageicon[language="JSON"],
-treechildren::-moz-tree-image(LanguageJSON) {
-  list-style-image: url("koicon://ko-language/JSON");
-}
-.languageicon[language="Laravel"],
-treechildren::-moz-tree-image(LanguageLaravel),
-.languageicon[language="LaravelBlade"],
-treechildren::-moz-tree-image(LanguageLaravelBlade) {
-  list-style-image: url("koicon://ko-language/LaravelBlade");
-}
-.languageicon[language="Less"],
-treechildren::-moz-tree-image(LanguageLess) {
-  list-style-image: url("koicon://ko-language/Less");
-}
-.languageicon[language="MXML"],
-treechildren::-moz-tree-image(LanguageMXML) {
-  list-style-image: url("koicon://ko-language/MXML");
-}
-.languageicon[language="Node.js"],
-treechildren::-moz-tree-image(LanguageNodejs) {
-  list-style-image: url("koicon://ko-language/Node.js");
-}
-.languageicon[language="Perl"],
-treechildren::-moz-tree-image(LanguagePerl) {
-  list-style-image: url("koicon://ko-language/Perl");
-}
-.languageicon[language="PHP"],
-treechildren::-moz-tree-image(LanguagePHP) {
-  list-style-image: url("koicon://ko-language/PHP");
-}
-.languageicon[language="Python"],
-treechildren::-moz-tree-image(LanguagePython) {
-  list-style-image: url("koicon://ko-language/Python");
-}
-.languageicon[language="Python3"],
-treechildren::-moz-tree-image(LanguagePython3) {
-  list-style-image: url("koicon://ko-language/Python3");
-}
-.languageicon[language="RHTML"],
-treechildren::-moz-tree-image(LanguageRHTML) {
-  list-style-image: url("koicon://ko-language/RHTML");
-}
-.languageicon[language="Ruby"],
-treechildren::-moz-tree-image(LanguageRuby) {
-  list-style-image: url("koicon://ko-language/Ruby");
-}
-.languageicon[language="Sass"],
-treechildren::-moz-tree-image(LanguageSass),
-.languageicon[language="SCSS"],
-treechildren::-moz-tree-image(LanguageSCSS) {
-  list-style-image: url("koicon://ko-language/SCSS");
-}
-.languageicon[language="Tcl"],
-treechildren::-moz-tree-image(LanguageTcl) {
-  list-style-image: url("koicon://ko-language/Tcl");
-}
-.languageicon[language="Twig"],
-treechildren::-moz-tree-image(LanguageTwig) {
-  list-style-image: url("koicon://ko-language/Twig");
-}
-.languageicon[language="XML"],
-treechildren::-moz-tree-image(LanguageXML) {
-  list-style-image: url("koicon://ko-language/XML");
-}
-.languageicon[language="XSLT"],
-treechildren::-moz-tree-image(LanguageXSLT) {
-  list-style-image: url("koicon://ko-language/XSLT");
-}
-.languageicon[language="XBL"],
-treechildren::-moz-tree-image(LanguageXBL),
-.languageicon[language="XUL"],
-treechildren::-moz-tree-image(LanguageXUL) {
-  list-style-image: url("koicon://ko-language/XUL");
-}
-
-
-.primary_menu_item {
-    font-weight: bold;
-}
-
-.thin-inset-border,
-.thin-outset-border,
-.zero-space {
-    margin: 0px;
-    padding: 0px;
-}
-
-.no-border {
-    margin: 0px;
-    padding: 0px;
-    border: none;
-}
-
-.blank-workspace {
-    margin: 0px;
-    padding: 0px;
-    background-color: appworkspace;
-}
-
-
-/* groovy separator (0 padding, for dividing effects)
-   XXX This was the only thing needed from the old KomodoDialog.css. Should
-       this be in its own dialog.css?
-*/
-separator.groovy-thin
-{
-    border-top: 1px solid threedshadow;
-    border-bottom: 1px solid threedhighlight;
-    height: 0px;
-}
-
-/* add some exra space between a tab icon and the tab text */
-tab > .tab-text {
-  padding-left: 3px;
-  padding-right: 3px;
-}
-
-#gotoLine_error_hbox {
-    background-color: #FFF1A8;
-}
-#gotoLine_error_image {
-    list-style-image: url('chrome://famfamfamsilk/skin/icons/error.png');
-}
-
-/* Notifications / progress button */
-#statusbar-throbber {
-    -moz-box-align: center;
-    width: 24px;
-}
-#statusbar-throbber:not([active]) #statusbar-throbber-inner {
-    visibility: collapse;
-}
-
-#statusbar-throbber-inner
-{
-    margin: 2px 4px 0;
-    width: 12px;
-    height: 12px;
-    background: #999999;
-}
-
-#statusbar-throbber[active] #statusbar-throbber-inner {
-    animation: throbber 0.5s linear infinite;
-}
-
-@keyframes throbber {
-    0%   { opacity:1; transform: scale(0.1); }
-    100% { opacity:0; transform: scale(1.0); }
-}
-
-
-/* toolbox2 styles */
-treechildren#toolbox2-hierarchy-treebody::-moz-tree-image {
-    padding-right: 4px;
-}
-
-/**
- * Goto line panel styling.
- */
-#gotoLine_panel {
-}
-
-#gotoLine_vbox {
-    padding: 4px;
-}
-
-#gotoLine_description {
-}
-
-.file-status-icons-end {
-  margin: 0 0 0 2px;
-}
-
-.file-readonly-icon[file_readonly="readonly"] {
-  list-style-image : url("chrome://komodo/skin/images/status_icon_readonly_16x16.png");
-  margin: 7px -3px 0 2px;
-}
-
-.native_file_image[alt_image="browser"] {
-  list-style-image : url("chrome://komodo/skin/images/preview_in_browser.png");
-}
-.native_file_image[alt_image="async_operation"] {
-  list-style-image : url("chrome://global/skin/icons/loading_16.png");
-}
-
-.file-status2-icon:not([file_status2]),
-.file-readonly-icon:not([file_readonly]) {
-  /* Collapse status images that are not showing anything. */
-  display: none;
-}
-
-/* #if PLATFORM == "linux" */
-#changeTracker_undo {
-    min-height: 24px;
-}
-/* #endif */
