ColorScheme Editor: The color scheme editor has been significantly overhauled
rn=

(integrated from master branch change 9.2.1-777-g1b30e78 by Nathan
Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?cfbisc');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?cfbisc#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?cfbisc') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?cfbisc') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?cfbisc#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?vdlgs4');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?vdlgs4#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?vdlgs4') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?vdlgs4') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?vdlgs4#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -884,6 +884,21 @@
 .icon-clock-o {
     &:before {
         content: @icon-clock-o;
+    }
+}
+.icon-download {
+    &:before {
+        content: @icon-download;
+    }
+}
+.icon-bold {
+    &:before {
+        content: @icon-bold;
+    }
+}
+.icon-italic {
+    &:before {
+        content: @icon-italic;
     }
 }
 .icon-stop3 {
