--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -172,6 +172,9 @@
 @icon-map-pin: "\f276";
 @icon-map-signs: "\f277";
 @icon-clock-o: "\f017";
+@icon-download: "\f019";
+@icon-bold: "\f032";
+@icon-italic: "\f033";
 @icon-stop3: "\f04d";
 @icon-plus-circle3: "\f055";
 @icon-minus-circle: "\f056";
