--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -531,6 +531,11 @@ button.unstyled
     }
 }
 
+button[type="checkbox"][checked="true"]
+{
+    box-shadow: inset 0px 0px 0px 1px @special;
+}
+
 /* Groupboxes */
 
 .groupbox-body
