--- a/src/modules/breadcrumbs/skin/breadcrumbs.less
+++ b/src/modules/breadcrumbs/skin/breadcrumbs.less
@@ -1,4 +1,3 @@
-[anonid="statusbar-message-deck-default"]
 @import url("chrome://komodo/skin/global/colors.less");
 @import url("resource://profile/colors.less");
 
@@ -120,5 +119,10 @@
             }
         }
     }
+}
+
+[anonid="statusbar-message-deck-default"]
+{
+    -moz-box-direction: reverse !important;
 }
 
