Icons: Add NPM icon
(integrated from master branch change 9.2.1-936-g4cd36e0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'icomoon';
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?vdlgs4');
-    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?vdlgs4#iefix') format('embedded-opentype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?vdlgs4') format('truetype'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?vdlgs4') format('woff'),
-        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?vdlgs4#icomoon') format('svg');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?l8w1uz');
+    src:    url('chrome://komodo/skin/global/icons/fonts/icomoon.eot?l8w1uz#iefix') format('embedded-opentype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.ttf?l8w1uz') format('truetype'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.woff?l8w1uz') format('woff'),
+        url('chrome://komodo/skin/global/icons/fonts/icomoon.svg?l8w1uz#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -484,6 +484,11 @@
 .icon-terminal {
     &:before {
         content: @icon-terminal;
+    }
+}
+.icon-npm {
+    &:before {
+        content: @icon-npm;
     }
 }
 .icon-search {
