UI: Limit menu acceltext width
(integrated from master branch change 9.2.1-946-g5d721a0 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -465,6 +465,12 @@ separator
     opacity: 0.6;
     font-family: monospace;
     margin-left: 2rem;
+    
+    &, label
+    {
+        max-width: 200px;
+        overflow: auto;
+    }
 }
 
 menu, menuitem
