UI: Don't bother rounding corners when the window is maximized
(integrated from master branch change 9.2.1-991-g8f3b668 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/chromeless.less
+++ b/src/chrome/komodo/skin/global/chromeless.less
@@ -10,7 +10,7 @@
     }
 }
 
-:root[hidechrome="true"]
+:root[hidechrome="true"]:not([sizemode="maximized"])
 {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
@@ -114,7 +114,13 @@
     {
         background: @background;
     }
+    
     color: @foreground;
+}
+
+#komodo_main[sizemode="maximized"]
+{
+    background: @background;
 }
 
 /* Resize handlers */
