UI: Add tab hover effect
(integrated from master branch change 9.2.1-993-g5ee09bc by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -204,6 +204,11 @@ tabs
         {
             opacity: 0.7;
         }
+        
+        &:hover
+        {
+            border-bottom: 2px solid fade(@special, 50%);
+        }
     }
     
     tab[selected]
