UI: Fix selected tree elements missing foreground
(integrated from master branch change 9.2.1-994-g7911a52 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -381,7 +381,7 @@ treechildren::-moz-tree-cell-text
 
 treechildren::-moz-tree-cell-text(selected)
 {
-    color: @selected-foreground;
+    color: @selected-foreground !important;
 }
 
 treechildren::-moz-tree-twisty {
