UI: Fix container color
(integrated from master branch change 9.2.1-1000-gce26ac5 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -365,7 +365,7 @@ treechildren:not(.autocomplete-treebody)::-moz-tree-row
 
 treechildren::-moz-tree-cell-text(container)
 {
-    color: darken(@foreground, 30%);
+    color: darken(@foreground, 30%) !important;
 }
 
 treechildren::-moz-tree-row(selected)
