--- a/src/modules/console/content/views/console.html
+++ b/src/modules/console/content/views/console.html
@@ -14,7 +14,7 @@
   <ul id="output"></ul>
 </div>
 
-<form class="hud statusbar" id="statusbar">
+<form class="widgetToolbarWrap" id="statusbar">
     <div id="input-wrapper" class="input-field">
         <textarea id="input" wrap="off"></textarea>
 <span id="input-mock">a
