UI: Add command output stop/list icons
(integrated from master branch change 9.2.1-1008-gc3933c2 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -75,6 +75,8 @@
 .debug-stepover-icon { .icon(); .icon-step-over(); }
 .debug-stepout-icon { .icon(); .icon-step-out(); }
 .debug-stepout-icon { .icon(); .icon-step-out(); }
+.find-stop-icon { .icon(); .icon-stop3(); }
+.bulletlist-icon { .icon(); .icon-bars(); }
 .macro-new-icon { .icon(); .icon-plus-circle(); }
 .macro-record-icon { .icon(); .icon-record(); }
 .macro-pause-icon { .icon(); .icon-pause(); }
