Console: Fix statusbar styling
(integrated from master branch change 9.2.1-1039-gc474b1c by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/console/content/less/console.less
+++ b/src/modules/console/content/less/console.less
@@ -1,33 +1,3 @@
-/* Delete this */
-/*
-#console
-{
-    background: rgb(240,240,240);
-}
-
-.statusbar
-{
-    background: rgb(210,210,210);
-}
-
-.hud
-{
-    background: rgb(190,190,190);
-    
-    .selected
-    {
-        background: blue;
-        color: white;
-    }
-}
-
-#input
-{
-    background: #FFF;
-}
-*/
-/* Delete this */
-
 *, *:before, *:after
 {
     box-sizing: border-box;
@@ -230,7 +200,7 @@ ul, li
     
 }
 
-.statusbar
+.widgetToolbarWrap
 {
     display: flex;
     align-items: center;
