Less:  Adding generic warning class
(integrated from master branch change f9f6860 by Carey Hoffman <cgchoffman@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -742,3 +742,10 @@ page.widget
         }
     }
 }
+
+//Generic warning CSS class
+.warning
+{
+    border: 1px solid @state-warning;
+    color: @state-warning;
+}
