Icons: Added SCC icon
(integrated from master branch change 9.2.1-1048-g85d53a6 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons/style.less
+++ b/src/chrome/komodo/skin/global/icons/style.less
@@ -491,6 +491,11 @@
         content: @icon-npm;
     }
 }
+.icon-scc {
+    &:before {
+        content: @icon-scc;
+    }
+}
 .icon-search {
     &:before {
         content: @icon-search;
