--- a/src/chrome/komodo/skin/global/icons/variables.less
+++ b/src/chrome/komodo/skin/global/icons/variables.less
@@ -93,6 +93,7 @@
 @icon-circle-code: "\eed3";
 @icon-terminal: "\eed4";
 @icon-npm: "\ef10";
+@icon-scc: "\ef46";
 @icon-search: "\f002";
 @icon-star: "\f005";
 @icon-star-o: "\f006";
