Icons: Added menu-history-icon
(integrated from master branch change 9.2.1-1065-gd98683a by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/icons.less
+++ b/src/chrome/komodo/skin/global/icons.less
@@ -90,6 +90,8 @@
 .help-icon { .icon-question4(); }
 .overflow-toolbarbutton > .toolbarbutton-text { .icon(); .icon-arrow-down3(); }
 
+.menu-history-icon > .toolbarbutton-text { .icon(); .icon-clock-o(); }
+
 .regex-shortcuts-button > .toolbarbutton-text { .icon(); .icon-external-link-square(); }
 .regex-shortcuts-button > .toolbarbutton-icon { display: none; }
 .regex-delimiters-button { .icon(); .icon-code(); }
