UI: Added focus effect to buttons
(integrated from master branch change 9.2.1-1066-g9892ef4 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -275,6 +275,14 @@ textbox, menulist
     }
 }
 
+toolbarbutton, button
+{
+    &:focus
+    {
+        outline: 1px dotted @special;
+    }
+}
+
 :root:not(#komodo_main) view
 {
     &:focus, &:active, &[focused]
