UI: Add margin around scrollbars to make them stad out better
(integrated from master branch change 9.2.1-1080-g4a79604 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/scrollbars.less
+++ b/src/chrome/komodo/skin/global/scrollbars.less
@@ -5,7 +5,8 @@
 
 page.widget[containerOrient="vertical"] scrollbar
 {
-    margin-left: -15px;
+    margin: 3px;
+    margin-left: -18px;
 }
 
 .autoscroll
@@ -20,6 +21,7 @@ scrollbar
     border: 0;
     background: transparent;
     opacity: 1.0 !important;
+    margin: 1px;
     
     &[orient="vertical"]
     {
