UI: Don't add buttons to embedded dialogs
(integrated from master branch change 9.2.1-1082-gcace2b2 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/bindings.less
+++ b/src/chrome/komodo/skin/global/bindings.less
@@ -1,4 +1,4 @@
-window:not(#komodo_main).dialog
+window:not(#komodo_main):not(.embedded).dialog
 {
   -moz-binding: url("chrome://komodo/content/bindings/windows.xml#window-chromeless");
 }
