UI: Color treecols
(integrated from master branch change 9.2.1-1083-gc4bb62e by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/chrome/komodo/skin/global/normalize.less
+++ b/src/chrome/komodo/skin/global/normalize.less
@@ -304,6 +304,11 @@ tree, listbox, richlistbox
     {
         color: @foreground;
         
+        treecol
+        {
+            background: @contrast;
+        }
+        
         &:not(tree),
         .tree-rows
         {
@@ -320,6 +325,7 @@ tree, listbox, richlistbox
     {
         color: @textbox-foreground;
         
+        treecol,
         &:not(tree),
         .tree-rows
         {
